# comfyui-controlbot

./: README.MD  __init__.py  bot_config.json  config.json  pyproject.toml  save_to_phone.py  telegram_comfy_bot.py  telegram_daemon.py  workflow_api.json
workflow-api/: workflow_api.json
