# pyproject.toml
[project]
name = "comfyui-controlbot" # Unique identifier for your node. Immutable after creation.
description = "This is a Comfyui node bot for controlling comfyui via telegram bot"
version = "1.0.1" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/AbhishekJha3511/comfyui-controlbot"

[tool.comfy]
PublisherId = "abhishekjha3511" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "comfyui-controlbot" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)